description tag added

--- a/posts/templates/posts/base.html
+++ b/posts/templates/posts/base.html
@@ -4,6 +4,9 @@
     <!-- Use boostrap and css file stored in product/base.css -->
 
     {% load staticfiles %}
+    {% block meta %}
+
+    {% endblock %}
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="{% static 'posts/css/bootstrap.min.css' %}">
