--- a/specificpages/templates/specificpages/about-us.html
+++ b/specificpages/templates/specificpages/about-us.html
@@ -1,6 +1,11 @@
 {% extends 'posts/base.html'%}
 {% load staticfiles %}
 
+{% block meta %}
+<meta name="keywords" content="نوسان گل ">
+<meta name="description" content="معرفی گروه مشاور سرمایه گذاری نوسان گلد و توضیح در رابطه با امکانات و خدمات نوسان گلد.">
+
+{% endblock %}
 
 {% block style %}
 <link rel="stylesheet" type="text/css" href="{% static 'specificpages/css/about-us.css' %}"/>
