--- a/specificpages/templates/specificpages/advertising.html
+++ b/specificpages/templates/specificpages/advertising.html
@@ -1,6 +1,11 @@
 {% extends 'posts/base.html'%}
 {% load staticfiles %}
 
+{% block meta %}
+<meta name="keywords" content="تبلیغات,navasangold, نوسان گلد">
+<meta name="description" content="مشاهده ی قسمت هایی که تبلیغ شما در آنجا قرار خواهد گرفت و همچنین مشاهده ی قیمت های قسمت های مختلف نوسان گلد. ">
+
+{% endblock %}
 
 {% block style %}
 <link rel="stylesheet" type="text/css" href="{% static 'specificpages/css/advertising.css' %}"/>
