--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -1,5 +1,12 @@
 {% extends 'posts/base.html' %}
 {% load staticfiles %}
+
+{% block meta %}
+<meta name="keywords" content="ورود,نوسان گلد">
+
+
+{% endblock %}
+
 {% block style %}
 <link rel="stylesheet" type="text/css" href="{% static 'users/css/login.css' %}"/>
 {% endblock %}
