--- a/posts/templates/posts/calender.html
+++ b/posts/templates/posts/calender.html
@@ -5,6 +5,12 @@
 {% load custom_tags %}
 {% load staticfiles %}
 
+{% block meta %}
+<meta name="keywords" content="تقویم اقتصادی">
+<meta name="description" content="مشاهده رویداد هایی که در طی ماه در بازار بورس طلا اتفاق افتاده ویا قرار است اتفاق بیفتند. ">
+
+{% endblock %}
+
 {% block style %}
 <link rel="stylesheet" href="{% static 'posts/css/calender.css' %}">
 <link  href="{% static 'posts/css/datepicker.css' %}" rel="stylesheet">
