--- a/posts/templates/posts/homepage.html
+++ b/posts/templates/posts/homepage.html
@@ -5,6 +5,7 @@
 {% load staticfiles %}
 
 {% block meta %}
+<meta name="google-site-verification" content="qT7F4iIPwX2s1zas81T6ky3OMPB0kBvEXYC012OkRE0" />
 <meta name="keywords" content="navasangold, نوسان گلد, طلا, تحلیل اقتصادی, اخبار بورس">
 <meta name="description" content="نوسان گلد سایت خبری و مشاوره ای امکاناتی مثل تقویم اقتصادی،اخبار و تحلیل های ویژه و تخصصی  استادان مجرد در زمینه ی طلا توسط برای شما فراهم می آورد.">
 
