--- a/posts/templates/posts/homepage.html
+++ b/posts/templates/posts/homepage.html
@@ -53,15 +53,14 @@
                                     <h2 style="padding:10px;padding-top:0px;"> {{ post.header }}</h2>
 
                                     <p>{{ post.description|safe }}<a id="detail-link"
-                                                                     href="{% url 'posts:detail' header=post.header|urlencode %}">بیشتر</a>
-                                    </p>
+                                                                     href="{% url 'posts:detail' header=post.header %}">بیشتر</a></p>
+
                                 </div>
                                 <ul class="list-inline" style="padding-right:0px;">
                                     <li>
 
 <span class="glyphicon glyphicon-user" aria-hidden="true"
-      style="font-size:15px;"></span> <a href="{% url 'posts:author-view' author_username=post.author %}">{{ post.author
-                                        }}</a>
+      style="font-size:15px;"></span> <a href="{% url 'posts:author-view' author_username=post.author %}">{{ post.author}}</a>
                                     </li>
 
 
@@ -77,7 +76,7 @@
 
                                         <span class="glyphicon glyphicon-tag" aria-hidden="true"
                                         ></span>
-                                        <a href="{% url 'posts:tag' tag=post.Main_Tag|urlencode %}"
+                                        <a href="{% url 'posts:tag' tag=post.Main_Tag%}"
                                         >{{ post.Main_Tag}}</a>
                                     </li>
                                 </ul>
