--- a/posts/templates/posts/base.html
+++ b/posts/templates/posts/base.html
@@ -255,6 +255,32 @@
                     <a class="btn btn-primary btn-sm" href="{% url 'user:register' %}">
                         ایجاد حساب </a>
                 </div>
+                <ul class="list-inline" id="SideNav-bottom-links-list">
+                    <li>
+                    <a href="/about-us">
+                                درباره ما
+                            </a>
+                </li>
+
+                   <li>
+                       <a href="/contact-us/">
+                                تماس با ما
+                            </a>
+                </li>
+                       <li>
+                     <a href="/rules/">
+                                قوانین
+                            </a>
+                </li>
+                    <li>
+
+                            <a href="">
+                                خرید اشتراک
+                            </a>
+                    </li>
+                </ul>
+
+
 
 
             </div>
