--- a/posts/static/posts/css/base.css
+++ b/posts/static/posts/css/base.css
@@ -412,7 +412,7 @@ background-color:#337ab7;
 margin-top:10px;
 
 border-top:1px solid #808b9c;
-
+padding-right:0px;
 }
 #SideNav .create-account #SideNav-bottom-links-list a:hover{
 background-color:transparent;
