--- a/posts/static/posts/css/base.css
+++ b/posts/static/posts/css/base.css
@@ -413,6 +413,7 @@ margin-top:10px;
 
 border-top:1px solid #808b9c;
 padding:10px;
+text-align:center;
 }
 #SideNav .create-account #SideNav-bottom-links-list a:hover{
 background-color:transparent;
