--- a/users/templates/users/edit_profile.html
+++ b/users/templates/users/edit_profile.html
@@ -62,7 +62,7 @@
                     <label class="col-sm-2 control-label"  >نام:</label>
 
                     <div class="col-sm-8" >
-                        <input class="form-control "  id="first_name" name="first_name" placeholder="{{user.first_name}}"
+                        <input class="form-control "  id="first_name" name="first_name" value="{{user.first_name}}"
                                autofocus=""
                                type="text">
                     </div>
@@ -74,23 +74,37 @@
 
                     <label class="control-label col-sm-2" >نام خانوادگی:</label>
                     <div class="col-sm-8">
-                        <input class="form-control" id="last_name" name="last_name" placeholder="{{user.last_name}}"
+                        <input class="form-control" id="last_name" name="last_name" value="{{user.last_name}}"
                                autofocus=""
                                type="text">
                     </div>
                 </div>
-                <div class="form-group">
+                    <div class="form-group">
                     <label class="control-label col-sm-2" >شماره تلفن همراه:</label>
 
                     <div class="col-sm-8">
                         <input class="form-control" id="phone_number" name="phone_number"
-                               placeholder="{{user.userprofile.phone_number}}"
+                               value="{{user.userprofile.phone_number}}"
                                autofocus=""
                                type="text">
                     </div>
 
                 </div>
+                     <div class="form-group">
 
+                    <label class="control-label col-sm-2" >شهر:</label>
+                         <div class="col-sm-8">
+                <select name="city" class="form-control" required id="id_city">
+
+               {% for city in cities %}
+
+                            <option value="{{ city }}" {% if city == user.userprofile.city %} selected{% endif %}>{{ city }}</option>
+                            {% endfor %}
+                </select>
+
+
+                </div>
+                     </div>
 
                 <div class="form-group">
                     {% get_current_timezone as TIME_ZONE %}
@@ -119,3 +133,4 @@
 
 {% endblock %}
 
+}
