--- a/posts/templates/posts/homepage.html
+++ b/posts/templates/posts/homepage.html
@@ -78,6 +78,8 @@
                                         <a href="{% url 'posts:tag' tag=post.Main_Tag%}"
                                         >{{ post.Main_Tag}}</a>
                                     </li>
+
+                                    <li><span class="fa fa-eye" aria-hidden="true" style="font-weight:500;"></span> {{post.seen}}</li>
                                 </ul>
 
                             </div>
