detail container changed to container fluid

--- a/posts/templates/posts/detail.html
+++ b/posts/templates/posts/detail.html
@@ -20,7 +20,7 @@
 {% endblock %}
 
 {% block body %}
-<div class="container" id="detail-container">
+<div class="container-fluid" id="detail-container">
     <div class="jumbotron">
         <h3 style="text-align:center;padding-bottom:20px;">{{post.header }}</h3>
         <img class="img-responsive" src="{{post.img.url}}" title="{{post.header }}" alt="{{post.header }}"
