--- a/posts/templates/posts/base.html
+++ b/posts/templates/posts/base.html
@@ -106,9 +106,9 @@
                            aria-haspopup="true" aria-expanded="false">
                             تحلیل ویژه </a>
                         <ul class="dropdown-menu menu2">
-                            <li><a href="{% url 'posts:articles' type='analytical' %} ">انس جهانی</a></li>
-                            <li><a href="{% url 'posts:articles' type='analytical' %} ">جفت ارزها</a></li>
-                            <li><a href="{% url 'posts:articles' type='analytical' %} ">دلار داخلی</a></li>
+                            <li><a href="{% url 'posts:articles' type='universal_ons' %} ">انس جهانی</a></li>
+                            <li><a href="{% url 'posts:articles' type='pairs_of_currencies' %} ">جفت ارزها</a></li>
+                            <li><a href="{% url 'posts:articles' type='domestic_dollar' %} ">دلار داخلی</a></li>
 
 
                         </ul>
