--- a/posts/static/posts/css/homepage.css
+++ b/posts/static/posts/css/homepage.css
@@ -58,10 +58,25 @@ background-color:transparent;
 
 }
 
-.post-bottom{
+.post-stuff{
 
 padding-bottom:36px;
 
+}
+
+.post-stuff h2{
+
+font-size:20px;
+font-weight:100;
+}
+
+.post-stuff p{
+color:#666;
+ text-align: justify;
+ line-height: 25px;
+font-size:15px;
+padding:4px;
+padding-top:0px;
 }
 
 .list-inline{
