--- a/posts/templates/posts/detail.html
+++ b/posts/templates/posts/detail.html
@@ -93,9 +93,12 @@
 
                             </div>
                             <div class="col-md-2 col-sm-4 col-xs-4" id="author-info-right-side">
-
+                    {% if post.author.user.userprofile.pro_img %}
                                     <img class="img-responsive" id="author-img"
                                          src="{{ post.author.user.userprofile.pro_img.url }}">
+{% else %}
+                                  <img class="img-responsive" id="author-no-img"
+                                         src="{% static 'users/img/anonymous-user.jpg' %}">
 
 
                             </div>
@@ -150,7 +153,7 @@
 
             {% else %}
             <img
-                    src="http://arminyahya.pythonanywhere.com/media/uploaded/default_img_prof.jpg"
+                    src="{% static 'users/img/anonymous-user.jpg' %}"
                     alt="{{comments.user.username}}">
             {% endif %}
 
@@ -198,7 +201,7 @@
 
                         {% else %}
                         <img
-                                src="http://arminyahya.pythonanywhere.com/media/uploaded/default_img_prof.jpg"
+                               src="{% static 'users/img/anonymous-user.jpg' %}"
                                 alt="{{children.user.username}}">
                         {% endif %}
                         <h4> {{ children.user }}</h4>
@@ -235,7 +238,7 @@
 
                             {% else %}
                             <img
-                                    src="http://arminyahya.pythonanywhere.com/media/uploaded/default_img_prof.jpg"
+                                   src="{% static 'users/img/anonymous-user.jpg' %}"
                                     alt="{{children.user.username}}">
                             {% endif %}
                             <h4> {{ children.user }}</h4>
@@ -267,7 +270,7 @@
 
                 {% else %}
                 <img
-                        src="http://arminyahya.pythonanywhere.com/media/uploaded/default_img_prof.jpg"
+                        src="{% static 'users/img/anonymous-user.jpg' %}"
                         alt="{{comments.user.username}}">
                 {% endif %}
 
