bug fixed endif added

--- a/posts/templates/posts/detail.html
+++ b/posts/templates/posts/detail.html
@@ -100,7 +100,7 @@
                                   <img class="img-responsive" id="author-no-img"
                                          src="{% static 'users/img/anonymous-user.jpg' %}">
 
-
+{% endif %}
                             </div>
 
                         </div>
