direction changed for economic_calender.html

--- a/posts/templates/posts/economic_calender.html
+++ b/posts/templates/posts/economic_calender.html
@@ -38,15 +38,15 @@
                 {{ query.event }}
 
                 </td>
-                <td>
+                <td dir="ltr">
                 {{ query.actual }}
 
                 </td>
-                <td>
+                <td dir="ltr">
                 {{ query.predict }}
 
                 </td>
-                <td>
+                <td dir="ltr">
                 {{ query.previous }}
 
                 </td>
