calender current month show testing

--- a/posts/templates/posts/economic_calender.html
+++ b/posts/templates/posts/economic_calender.html
@@ -20,10 +20,10 @@
 
             {% for query in queryset %}
             <tr>
-                <td class="date-column">
+                <td class="date-column" dir="ltr">
                 {{ query.date }}
                 </td>
-                <td>
+                <td dir="ltr">
                 {{ query.time }}
                 </td>
                 <td>
