tag problem with unicode going to fixe

--- a/posts/templates/posts/base.html
+++ b/posts/templates/posts/base.html
@@ -313,7 +313,7 @@
                             <a href="/rules/">
                                 قوانین
                             </a>
-                            <a href="">
+                            <a href="/tariffs/">
                                 خرید اشتراک
                             </a>
 
