--- a/posts/templates/posts/homepage.html
+++ b/posts/templates/posts/homepage.html
@@ -50,9 +50,16 @@
                                 <div class="post-stuff">
 
                                     <h2 style="padding:10px;padding-top:0px;"> {{ post.header }}</h2>
+                                    {% if not user.is_authenticated and post.is_vip or user.is_authenticated and post.is_vip and not user.userprofile.have_vip %}
 
-                                    <p>{{ post.description|safe|striptags }}<a id="detail-link"
+
+                                    <p>{{ post.description|safe|striptags }}<a class="detail-link"
+                                                                     href="">بیشتر</a></p>
+                                   {% else %}
+                                    <p>{{ post.description|safe|striptags }}<a class="detail-link"
                                                                      href="{% url 'posts:detail' header=post.header|fix_spaces %}">بیشتر</a></p>
+
+                                    {% endif %}
 
                                 </div>
                                 <ul class="list-inline" style="padding-right:0px;">
@@ -76,7 +83,7 @@
                                         <span class="glyphicon glyphicon-tag" aria-hidden="true"
                                         ></span>
                                         <a href="{% url 'posts:tag' tag=post.Main_Tag%}"
-                                        >{{ post.get_Main_Tag}}</a>
+                                        >{{ post.Main_Tag}}</a>
                                     </li>
 
                                     <li><span class="fa fa-eye" aria-hidden="true" style="font-weight:500;"></span> {{post.seen}}</li>
