tariffs now have login required and detail BUG understood and

--- a/posts/static/posts/css/detail.css
+++ b/posts/static/posts/css/detail.css
@@ -146,6 +146,18 @@ position:relative;
 background-color:transparent;
 
 }
+#recommended-posts-heading{
+
+font-size:17px;
+
+}
+
+.favourites_link{
+
+
+font-size:18px;
+
+}
 
 
 #author-info-left-side{
