--- a/posts/templates/posts/base.html
+++ b/posts/templates/posts/base.html
@@ -152,8 +152,8 @@
                             حساب ها </a>
                         <ul class="dropdown-menu menu4">
 
-                            <li><a href="/mql5/">MQL5</a></li>
-                            <li><a href="/pamm/">PAMM(FXTM) </a></li>
+                            <li><a href="/mql5/" dir="ltr">MQL5</a></li>
+                            <li><a href="/pamm/" dir="ltr">PAMM(FXTM) </a></li>
 
                         </ul>
                     </li>
