footer remove js function added

--- a/posts/templates/posts/base.html
+++ b/posts/templates/posts/base.html
@@ -276,7 +276,7 @@
                 </li>
                     <li>
 
-                            <a href="">
+                            <a href="/tariffs/">
                                 خرید اشتراک
                             </a>
                     </li>
