vip until how to change ,changed

--- a/users/templates/users/verify_after_zarinpal.html
+++ b/users/templates/users/verify_after_zarinpal.html
@@ -12,14 +12,14 @@
 
     <p>پرداخت شما با موفقیت انجام شد .</p>
     <p>شماره تراکنش:{{refID}}</p>
-   {% if tariff_number == 1 %}
+   {% if tariffs_number == 1 %}
     <p>اشتراک 1ماهه برای شما فعال شد .</p>
-    {% elif tariff_number == 2 %}
+    {% elif tariffs_number == 2 %}
     <p>اشتراک 3ماهه برای شما فعال شد .</p>
-    {% elif tariff_number == 3 %}
+    {% elif tariffs_number == 3 %}
     <p>اشتراک 6ماهه برای شما فعال شد .</p>
-    {% else %}
-    <p>اشتراک 4ماهه برای شما فعال شد .</p>
+    {% elif tariffs_number == 4 %}
+    <p>اشتراک 12ماهه برای شما فعال شد .</p>
     {% endif %}
 </div>
 {% endblock %}
