--- a/users/templates/users/verify_after_zarinpal.html
+++ b/users/templates/users/verify_after_zarinpal.html
@@ -12,13 +12,13 @@
 
     <p>پرداخت شما با موفقیت انجام شد .</p>
     <p>شماره تراکنش:{{refID}}</p>
-   {% if tariffs_number == 1 %}
+   {% if tariffs_number == '1' %}
     <p>اشتراک 1ماهه برای شما فعال شد .</p>
-    {% elif tariffs_number == 2 %}
+    {% elif tariffs_number == '2' %}
     <p>اشتراک 3ماهه برای شما فعال شد .</p>
-    {% elif tariffs_number == 3 %}
+    {% elif tariffs_number == '3' %}
     <p>اشتراک 6ماهه برای شما فعال شد .</p>
-    {% elif tariffs_number == 4 %}
+    {% else tariffs_number == '4' %}
     <p>اشتراک 12ماهه برای شما فعال شد .</p>
     {% endif %}
 </div>
