--- a/users/templates/users/verify_after_zarinpal.html
+++ b/users/templates/users/verify_after_zarinpal.html
@@ -18,7 +18,7 @@
     <p>اشتراک 3ماهه برای شما فعال شد .</p>
     {% elif tariffs_number == '3' %}
     <p>اشتراک 6ماهه برای شما فعال شد .</p>
-    {% else tariffs_number == '4' %}
+    {% else %}
     <p>اشتراک 12ماهه برای شما فعال شد .</p>
     {% endif %}
 </div>
