favicon added to base

--- a/posts/templates/posts/base.html
+++ b/posts/templates/posts/base.html
@@ -9,6 +9,7 @@
     {% endblock %}
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" type="image/png" href="/favicon.png"/>
     <link rel="stylesheet" href="{% static 'posts/css/bootstrap.min.css' %}">
 
     <link rel="stylesheet" type="text/css" href="{% static 'posts/css/base.css' %}">
