currencies img testing

--- a/posts/templates/posts/economic_calender.html
+++ b/posts/templates/posts/economic_calender.html
@@ -26,7 +26,7 @@
         <td>
             {% if query.stock == 'USD' %}
 
-            <img src ="/dollar.png" style="width:30px;height:20px;">
+            <img src ="/currencies/dollar.png" style="width:30px;height:20px;">
             {% endif %}
 
         </td>
