tariffs links fixed and chart fixed

--- a/specificpages/templates/specificpages/tariffs.html
+++ b/specificpages/templates/specificpages/tariffs.html
@@ -21,7 +21,7 @@
     <img src="" class="tariffs-img" alt="tariffs-img-1">
     <div class="description">
     <span ></span>
-    <a class="btn btn-default btn-md link-to-bank" href="{% url 'user:send_to_zarinpal' tariffs_number=1 %}">
+    <a class="btn btn-default btn-md link-to-bank" href="{% url 'user:send_to_zarinpal' tariff_number=1 %}">
 خرید
     </a>
         </div>
@@ -30,7 +30,7 @@
     <img src="" class="tariffs-img" alt="tariffs-img-2">
     <div class="description">
     <span ></span>
-    <a class="btn btn-default btn-md link-to-bank" href="{% url 'user:send_to_zarinpal' tariffs_number=1 %}">
+    <a class="btn btn-default btn-md link-to-bank" href="{% url 'user:send_to_zarinpal' tariff_number=1 %}">
 خرید
     </a>
         </div>
@@ -39,7 +39,7 @@
     <img src="" class="tariffs-img" alt="tariffs-img-3">
     <div class="description">
     <span></span>
-    <a class="btn btn-default btn-md link-to-bank" href="{% url 'user:send_to_zarinpal' tariffs_number=1 %}">
+    <a class="btn btn-default btn-md link-to-bank" href="{% url 'user:send_to_zarinpal' tariff_number=1 %}">
 خرید
     </a>
         </div>
@@ -48,7 +48,7 @@
     <img src="" class="tariffs-img" alt="tariffs-img-4">
     <div class="description">
     <span></span>
-    <a class="btn btn-default btn-md link-to-bank" href="{% url 'user:send_to_zarinpal' tariffs_number=1 %}">
+    <a class="btn btn-default btn-md link-to-bank" href="{% url 'user:send_to_zarinpal' tariff_number=1 %}">
 خرید
     </a>
         </div>
